# reactive_pepper

./: CMakeLists.txt  LICENSE  package.xml  readme.txt  setup.py
camera-calibration/: camera_calibration.txt  run_calibration.py
examples/: arms_symmetry.py  arms_sync.py  battery.py  belly_dancer.py  close_hands.py  hands.py  head_touch.py  joints_temperatures.py  keys.txt  laser.py  leds.py  left_hand_touch.py  look_at.py  look_at_static_point.py  lower_commands_keys.txt  music.py  pointing.py  print_joints_state.py  rviz.py  set_arms_posture.py  set_head_posture.py  simple_head_motion.py  sonar.py  tablet.py  tracker.py  wheels.py  zero_position.py
foo/: tracker.py
launch/: pepper_interface.launch  pepper_interface_open_pose.launch
proxy/: LookAtProxy.py
rviz/: pepper_interface.rviz
scripts/pepper_interface/: __init__.py
scripts/pepper_interface/body/: arms.py  battery.py  hands.py  head.py  hip.py  joints.py  knee.py  leds.py  music.py  tablet.py  tts.py  wheels.py
scripts/pepper_interface/configuration/: configuration.py
scripts/pepper_interface/data_exchange/: data.py  data_extractor.py
scripts/pepper_interface/motion/: dance_manager.py  feedforward_interpolation.py  motion_manager.py  random_motion.py  repetitive_motion_manager.py  tracker.py  velocity_to_duration.py
scripts/pepper_interface/naoqi_/: memory.py  proxies.py  torso_transform.py
scripts/pepper_interface/ros/: camera_pub.py  joint_states_publisher.py  laser_pub.py  publishers.py  sonar_pub.py  tf_and_odometry_publisher.py  transforms.py
utils/: arm_position_recorder.py
(+8 files in other folders)
